# hackCugraph

./: .gitignore  CMakeLists.txt  README.md  cug.py  environment.yml  environments.yml
cmake/: CPM.cmake
datasets/: karate.csv  netscience.csv
docker/: hack.dockerfile
exatrkx-cpp/: CMakeLists.txt
exatrkx-cpp/datanmodels/: e_model.onnx  f_model.onnx
exatrkx-cpp/src/: 1_embed.cpp  1_embed_x.cpp  2_build_edge.cpp  3_filtering.cpp  3_filtering_x.cpp  4_gnn.cpp  5_labeling.cpp  CMakeLists.txt  Readme.md
src/: CMakeLists.txt  cugraphExample.cu  matrix_market_file_utilities.cu  misc_utilities.cpp  mmio_read.cpp  mmio_read_cugraph.cpp  test_utilities.hpp
